--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "test": "nodemon .",
     "delete-cmd": "node delete-slash-command.js"
   },
+  "engines": {
+    "node": "12.x"
+  },
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
